...
                    
                    Spacer()
                    
                    Button(action: {
                        self.isCreating = true
                    }) {
                        Text("Create First Game")
                            .frame(maxWidth: .infinity)
                            .padding(.vertical)
                    }
                    .foregroundColor(.white)
                    .font(.system(size: 22, weight: .bold))
                    .background(settings.theme.gradient)
...
                }
                .navigationTitle("Games")
                .toolbar {
                    Button(action: {
                        self.isCreating = true
                    }) {
                        Label("Create Game", systemImage: "plus")
                    }
                }
                .sheet(isPresented: $isCreating, content: presentSheet)
                .alert("Delete this game?", isPresented: $isDeleting) {
                    Button("Delete", role: .destructive) {
                        if let game = self.deletingGame {
...
