...
    
    let onPlayer: ((_ name: String, _ colour: String) -> ())?
    let editingPlayer: Player?
    
    @State private var title: String = "Create Player"
    @State private var name: String = ""
    @State private var createText: String = "Create"
    @State private var colour: Color = Color(hex: "FF1493")
    @State private var showColourPicker = false
    
    var body: some View {
        NavigationStack {
            Form {
...
